--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruby on Rails: Welcome aboard</title>
+    <title>Recovery Online</title>
     <style type="text/css" media="screen">
+
       body {
+		
+		background-image: url(http://www.aa.org/pics_site/aa_bkgd.gif);
+		background-repeat: repeat-x;
+		background-position: top left;
+		background-color: white;
         margin: 0;
         margin-bottom: 25px;
         padding: 0;
-        background-color: #f0f0f0;
-        font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana";
+        background-color: #ffffff;
+        font-family: "Helvetica", "Bitstream Vera Sans", "Verdana";
         font-size: 13px;
         color: #333;
+		display: block;
       }
-
+	li {
+		   list-style: none;
+	}
       h1 {
         font-size: 28px;
         color: #000;
@@ -25,215 +34,155 @@
         text-decoration: none;
       }
 
-
       #page {
-        background-color: #f0f0f0;
-        width: 750px;
+        background1-color: #f0f0f0;
+        width: 960px;
         margin: 0;
         margin-left: auto;
         margin-right: auto;
       }
 
-      #content {
-        float: left;
-        background-color: white;
-        border: 3px solid #aaa;
-        border-top: none;
-        padding: 25px;
-        width: 500px;
-      }
 
-      #sidebar {
-        float: right;
-        width: 175px;
-      }
-
-      #footer {
-        clear: both;
-      }
-
-
-      #header, #about, #getting-started {
-        padding-left: 75px;
-        padding-right: 30px;
-      }
-
-
-      #header {
-        background-image: url("images/rails.png");
-        background-repeat: no-repeat;
-        background-position: top left;
-        height: 64px;
-      }
-      #header h1, #header h2 {margin: 0}
-      #header h2 {
-        color: #888;
-        font-weight: normal;
-        font-size: 16px;
-      }
-
-
-      #about h3 {
-        margin: 0;
-        margin-bottom: 10px;
-        font-size: 14px;
-      }
-
-      #about-content {
-        background-color: #ffd;
-        border: 1px solid #fc0;
-        margin-left: -55px;
-        margin-right: -10px;
-      }
-      #about-content table {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-size: 11px;
-        border-collapse: collapse;
-      }
-      #about-content td {
-        padding: 10px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-      }
-      #about-content td.name  {color: #555}
-      #about-content td.value {color: #000}
-
-      #about-content ul {
-        padding: 0;
-        list-style-type: none;
-      }
-
-      #about-content.failure {
-        background-color: #fcc;
-        border: 1px solid #f00;
-      }
-      #about-content.failure p {
-        margin: 0;
-        padding: 10px;
-      }
-
-
-      #getting-started {
-        border-top: 1px solid #ccc;
-        margin-top: 25px;
-        padding-top: 15px;
-      }
-      #getting-started h1 {
-        margin: 0;
-        font-size: 20px;
-      }
-      #getting-started h2 {
-        margin: 0;
-        font-size: 14px;
-        font-weight: normal;
-        color: #333;
-        margin-bottom: 25px;
-      }
-      #getting-started ol {
-        margin-left: 0;
-        padding-left: 0;
-      }
-      #getting-started li {
-        font-size: 18px;
-        color: #888;
-        margin-bottom: 25px;
-      }
-      #getting-started li h2 {
-        margin: 0;
-        font-weight: normal;
-        font-size: 18px;
-        color: #333;
-      }
-      #getting-started li p {
-        color: #555;
-        font-size: 13px;
-      }
-
-
-      #sidebar ul {
-        margin-left: 0;
-        padding-left: 0;
-      }
-      #sidebar ul h3 {
-        margin-top: 25px;
-        font-size: 16px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #ccc;
-      }
-      #sidebar li {
-        list-style-type: none;
-      }
-      #sidebar ul.links li {
-        margin-bottom: 5px;
-      }
-
+      h1 {margin: 0;text-align1:center;font-size:40px;margin-top:20px;}
+      h2 {
+       	color: #888;
+       	font-weight: normal;
+       	font-size: 16px;
+		text-align:center;
+     }
+	#logo {
+		font1-size:20px;
+		text-align:center;
+	}
+	*.scrollable_y {
+		overflow1-y:auto;
+	}
+	*.list_header{
+		margin-left:auto;
+		margin-right:auto;
+		width: 667px;;
+	}
+	#meeting_list {
+		border1-width:1px;
+		border1-style:solid;
+		width: 667px;
+		margin:0px;
+		padding:0px;
+		margin-left:auto;
+		margin-right:auto;
+		height:800px;
+		background-color: #f5f5f5;
+	}
+	
+	#meeting_list li{
+		cursor:pointer;
+		position:relative;
+		margin: 5px;
+		height:75px;
+		width:100%;
+		border-style:solid;
+		border-width:0px 0px 1px 0px;
+		border-color:#e6e6e6;
+	}
+	*.participants {
+		position:absolute;
+		width:75px;
+		top:5px;
+		left:10px;
+		text-align:right;
+		font-size:40px;
+	}
+	*.floatleft{
+		float:left;
+	}
+	*.participant_text{
+		position:absolute;
+		top:45px;
+		left:10px;
+		width:75px;
+		text-align:right;
+		font-size:10px;
+	}
+	*.meeting_name{
+		position:absolute;
+		top:12px;
+		left:100px;
+		font-size:23px;
+		font-weight:bold;
+		margin-left:20px;
+	}
+	*.description{
+		position:absolute;
+		top:42px;
+		left:100px;
+		margin-left:20px;
+	}
+	*.inlineblock{
+		display:inline-block;
+	}
+	*.relative_position{
+		position:relative;
+	}
+	#createRoom {
+		display: block;
+		float: right;
+		width: 165px;
+		height: 35px;
+		margin: 12px;
+		background: url(https://s3.amazonaws.com/static.turntable.fm/images/index/create_new_btn.png);
+	}
     </style>
-    <script type="text/javascript">
-      function about() {
-        info = document.getElementById('about-content');
-        if (window.XMLHttpRequest)
-          { xhr = new XMLHttpRequest(); }
-        else
-          { xhr = new ActiveXObject("Microsoft.XMLHTTP"); }
-        xhr.open("GET","rails/info/properties",false);
-        xhr.send("");
-        info.innerHTML = xhr.responseText;
-        info.style.display = 'block'
-      }
-    </script>
+    
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+<script type="text/javascript">
+	$('body').ready(function(){
+		$('#meeting_list li').click(function(){
+			document.location='https://hangoutsapi.talkgadget.google.com/hangouts/9682fbb7f430135d3ff53db47f64e48402767ad2';
+		})
+	})
+	
+</script>
   </head>
   <body>
     <div id="page">
-      <div id="sidebar">
-        <ul id="sidebar-items">
-          <li>
-            <h3>Browse the documentation</h3>
-            <ul class="links">
-              <li><a href="http://api.rubyonrails.org/">Rails API</a></li>
-              <li><a href="http://stdlib.rubyonrails.org/">Ruby standard library</a></li>
-              <li><a href="http://corelib.rubyonrails.org/">Ruby core</a></li>
-              <li><a href="http://guides.rubyonrails.org/">Rails Guides</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-
-      <div id="content">
-        <div id="header">
-          <h1>Welcome aboard</h1>
-          <h2>You&rsquo;re riding Ruby on Rails!</h2>
-        </div>
-
-        <div id="about">
-          <h3><a href="rails/info/properties" onclick="about(); return false">About your application&rsquo;s environment</a></h3>
-          <div id="about-content" style="display: none"></div>
-        </div>
-
-        <div id="getting-started">
-          <h1>Getting started</h1>
-          <h2>Here&rsquo;s how to get rolling:</h2>
-
-          <ol>
-            <li>
-              <h2>Use <code>rails generate</code> to create your models and controllers</h2>
-              <p>To see all available options, run it without parameters.</p>
-            </li>
-
-            <li>
-              <h2>Set up a default route and remove or rename this file</h2>
-              <p>Routes are set up in config/routes.rb.</p>
-            </li>
-
-            <li>
-              <h2>Create your database</h2>
-              <p>Run <code>rake db:migrate</code> to create your database. If you're not using SQLite (the default), edit <code>config/database.yml</code> with your username and password.</p>
-            </li>
-          </ol>
-        </div>
-      </div>
-
-      <div id="footer">&nbsp;</div>
+    	<h1 id="logo">Recovery Online</h1><br/>
+	 	<h2>Alcoholics Anonymous</h2>
+		<div class='list_header'><a id="createRoom" href="http://turntable.fm/lobby#" title="Create new room"></a></div><br/><br/><br/><br/>
+		<ul id="meeting_list" class='scrollable_y'>
+			
+			<li><div class="inlineblock1"><div class='participants'>5</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>6 AM Dry Dock</div><div class='description'>Early morning group for fellow AAers</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>3</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>Daily Reflections</div><div class='description'>Come join us</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>7</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>Sunday Sunrise</div><div class='description'>Early birds catch the worm</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>4</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>Each Day A New Beginning</div><div class='description'>One day at a time</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>2</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>Step Talk</div><div class='description'>Talking through steps.</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>3</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>Cocoanuts</div><div class='description'>Five months running...</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>4</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>AA-ASL Women's Group</div><div class='description'>Women only -- step talk</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>3</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>Like A Prayer</div><div class='description'>We'll take you there</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>2</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>Mid-Morning Support</div><div class='description'>AA group</div></div>
+			</li>
+			<li><div class="inlineblock1"><div class='participants'>8</div><div class='participant_text'>PARTICIPANTS</div></div>
+				<div class="inlineblock1"><div class='meeting_name'>The Leaky Cauldron</div><div class='description'>Since 2011..going strong</div></div>
+			</li>
+		</ul>
+		
     </div>
   </body>
 </html>
